--- a/dev/sass/pages/_main.scss
+++ b/dev/sass/pages/_main.scss
@@ -7,13 +7,7 @@ body {
     position:relative;
 }
 
-#stars {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%; 
-    height:100%;
-}
+
 
 * {
     box-sizing:border-box;
@@ -63,6 +57,7 @@ body {
     background-color:#FFF;
     margin-bottom:200px;
     z-index:3;
+    overflow:hidden;
 
     * {
         position:relative;
